# UWB_Online_Initialisation

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: uwb_online_initialisation.launch
logs/catkin_tools_prebuild/: build.symlink.001.log.stderr  build.symlink.002.log.stderr  build.symlink.003.log.stderr  build.symlink.004.log.stderr  build.symlink.005.log.stderr
nodes/: uwb_online_initialisation_node
src/uwb_online_initialisation/: __init__.py  trajectory_optimisation.py  uwb_online_initialisation.py
